istio/dest_rule_alerts.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: alerts
spec:
  host: alerts
  subsets:
  - name: v1
    labels:
      version: v1
