istio/fault_injection-500.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: image-analysis
spec:
  hosts:
  - image-analysis.default.svc.cluster.local
  http:
  - fault:
      abort:
        httpStatus: 500
        percentage:
          value: 100
    route:
    - destination:
        host: image-analysis.default.svc.cluster.local
        subset: v1
