istio/fault_injection-delay10.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: image-analysis
spec:
  hosts:
  - image-analysis.default.svc.cluster.local
  http:
  - fault:
      delay:
        fixedDelay: 10s
        percentage:
          value: 100
    route:
    - destination:
        host: image-analysis.default.svc.cluster.local
        subset: v1
