istio/fault_injection.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: cpanel
spec:
  hosts:
  - cpanel
  http:
  - fault:
      delay:
        fixedDelay: 7s
        percentage:
          value: 100
    match:
    - headers:
        end-user:
          exact: user
    route:
    - destination:
        host: cpanel
        subset: v1
  - route:
    - destination:
        host: cpanel
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: alerts
spec:
  hosts:
  - alerts
  http:
  - fault:
    abort:
      httpStatus: 500
      percentage:
        value: 100
    match:
    - headers:
        end-user:
          exact: user
    route:
    - destination:
        host: alerts
        subset: v1
  - route:
    - destination:
        host: alerts
        subset: v1
---
