istio/ingress-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: airport-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: airport
spec:
  hosts:
  - "*"
  gateways:
  - airport-gateway
  http:
  - match:
    - uri:
        exact: /status
    - uri:
        exact: /system
    - uri:
        exact: /config
    - uri:
        prefix: /cameras
    - uri:
        prefix: /sections
    - uri:
        prefix: /alerts
    route:
    - destination:
        host: cpanel
        port:
          number: 8080
