istio/retry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: cpanel
spec:
  hosts:
  - "*"
  gateways:
  - airport-gateway
  http:
  - match:
    - uri:
        exact: /
    - uri:
        exact: /status
    - uri:
        exact: /alert
    - uri:
        exact: /analysis
    - uri:
        exact: /production
    - uri:
        exact: /config
    - uri:
        exact: /momentum/status
    - uri:
        prefix: /cameras
    - uri:
        prefix: /sections
    - uri:
        prefix: /alerts
    - uri:
        prefix: /collector
    - uri:
        prefix: /static
    route:
    - destination:
        host: cpanel.default.svc.cluster.local
        port:
          number: 8080
        subset: v1
    retries:
      attempts: 3
      perTryTimeout: 1s
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: section-1
spec:
  hosts:
  - section-1.default.svc.cluster.local
  http:
  - fault:
      abort:
        httpStatus: 500
        percentage:
          value: 10
    route:
    - destination:
        host: section-1.default.svc.cluster.local
        subset: v1
