istio/retry_fault.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: section-1
spec:
  hosts:
  - section-1.default.svc.cluster.local
  http:
  - fault:
      abort:
        httpStatus: 500
        percentage:
          value: 25
    route:
    - destination:
        host: section-1.default.svc.cluster.local
        subset: v1
