istio/round_robin.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: airport-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: cpanel
spec:
  hosts:
  - "*"
  gateways:
  - airport-gateway
  http:
  - match:
    - uri:
        exact: /
    - uri:
        exact: /status
    - uri:
        exact: /alert
    - uri:
        exact: /analysis
    - uri:
        exact: /production
    - uri:
        exact: /config
    - uri:
        prefix: /cameras
    - uri:
        prefix: /sections
    - uri:
        prefix: /alerts
    - uri:
        prefix: /collector
    - uri:
        prefix: /static
    route:
    - destination:
        host: cpanel.default.svc.cluster.local
        port:
          number: 8080
