istio/timeout.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: camera-agent-1
spec:
  hosts:
  - camera-agent-1.default.svc.cluster.local
  http:
  - route:
    - destination:
        host: camera-agent-1.default.svc.cluster.local
        subset: v1
    fault:
      delay:
        fixedDelay: 10s
        percentage:
          value: 50
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: cpanel
spec:
  hosts:
  - "*"
  gateways:
  - airport-gateway
  http:
  - match:
    - uri:
        exact: /
    - uri:
        exact: /status
    - uri:
        exact: /alert
    - uri:
        exact: /analysis
    - uri:
        exact: /production
    - uri:
        exact: /config
    - uri:
        prefix: /cameras
    - uri:
        prefix: /sections
    - uri:
        prefix: /alerts
    - uri:
        prefix: /collector
    - uri:
        prefix: /static
    route:
    - destination:
        host: cpanel.default.svc.cluster.local
        port:
          number: 8080
        subset: v1
    timeout: 3s
