istio/virt_svc_50-50.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: cpanel
spec:
  hosts:
  - "*"
  gateways:
  - airport-gateway
  http:
  - match:
    - uri:
        exact: /
    - uri:
        exact: /status
    - uri:
        exact: /alert
    - uri:
        exact: /analysis
    - uri:
        exact: /production
    - uri:
        exact: /config
    - uri:
        exact: /momentum/status
    - uri:
        prefix: /cameras
    - uri:
        prefix: /sections
    - uri:
        prefix: /alerts
    - uri:
        prefix: /collector
    - uri:
        prefix: /static
    route:
    - destination:
        host: cpanel.default.svc.cluster.local
        port:
          number: 8080
        subset: v1
      weight: 50
    - destination:
        host: cpanel.default.svc.cluster.local
        port:
          number: 8080
        subset: v2
      weight: 50
