istio/virt_svc_all.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: cpanel
spec:
  hosts:
  - cpanel.default.svc.cluster.local
  http:
  - route:
    - destination:
        host: cpanel.default.svc.cluster.local
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: alerts
spec:
  hosts:
  - alerts.default.svc.cluster.local
  http:
  - route:
    - destination:
        host: alerts.default.svc.cluster.local
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: section-1
spec:
  hosts:
  - section-1.default.svc.cluster.local
  http:
  - route:
    - destination:
        host: section-1.default.svc.cluster.local
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: camera-agent-1
spec:
  hosts:
  - camera-agent-1.default.svc.cluster.local
  http:
  - route:
    - destination:
        host: camera-agent-1.default.svc.cluster.local
        subset: v1
# ---
# apiVersion: networking.istio.io/v1alpha3
# kind: VirtualService
# metadata:
#   name: camera-agent-2
# spec:
#   hosts:
#   - camera-agent-2
#   http:
#   - route:
#     - destination:
#         host: camera-agent-2
#         subset: v1
# ---
# apiVersion: networking.istio.io/v1alpha3
# kind: VirtualService
# metadata:
#   name: face-recognition
# spec:
#   hosts:
#   - face-recognition
#   http:
#   - route:
#     - destination:
#         host: face-recognition
#         subset: v1
# ---
# apiVersion: networking.istio.io/v1alpha3
# kind: VirtualService
# metadata:
#   name: image-analysis
# spec:
#   hosts:
#   - image-analysis
#   http:
#   - route:
#     - destination:
#         host: image-analysis
#         subset: v1
